[fix]fix overflow-x in some pages

--- a/css/main.css
+++ b/css/main.css
@@ -1623,12 +1623,16 @@ input[type="tel"]:-ms-input-placeholder {
     max-width: none;
     margin: 0 auto; 
     overflow-y: hidden;
-    overflow-x: scroll;
+    overflow-x: hidden;
   }
   .content-wrapper__inner {
     margin-right: 0;
     margin-left: 0; 
     /*overflow: hidden;*/
+  }
+  .post-container--article {
+    overflow-x: scroll;
+    overflow-y: hidden;
   }
 }
 
